--- a/about/index.html
+++ b/about/index.html
@@ -153,7 +153,11 @@ Dev With Vishal
     <input class="form-control rounded-pill" name="q" type="search" aria-label="Search">
   </div>
 </form>
-      <ul class="navbar-nav ms-auto"></ul>
+      <ul class="navbar-nav ms-auto"><li class="nav-item">
+          <a class="nav-link" href="/series/">
+            <i class="fas fa-fw fa-columns"></i>Series
+          </a>
+        </li></ul>
     </div>
   </div>
 </nav>
@@ -253,7 +257,28 @@ Dev With Vishal
 </a>
       </li></ul>
   </div>
-</section>
+</section><section class="series-taxonomies row card component">
+      <div class="card-header">
+        <h2 class="card-title">
+          <a href="/series">Series</a>
+        </h2>
+      </div>
+      <div class="card-body">
+        <div class="py-2"><a href="/series/distributed-systems/" class="badge rounded post-taxonomy" title="Distributed Systems">
+            Distributed Systems<span class="badge badge-sm text-white bg-accent ms-1">1</span></a></div>
+      </div>
+    </section><section class="tags-taxonomies row card component">
+      <div class="card-header">
+        <h2 class="card-title">
+          <a href="/tags">Tags</a>
+        </h2>
+      </div>
+      <div class="card-body">
+        <div class="py-2"><a href="/tags/crdts/" class="badge rounded post-taxonomy" title="CRDTs">
+            CRDTs<span class="badge badge-sm text-white bg-accent ms-1">1</span></a><a href="/tags/distributed-systems/" class="badge rounded post-taxonomy" title="Distributed Systems">
+            Distributed Systems<span class="badge badge-sm text-white bg-accent ms-1">1</span></a></div>
+      </div>
+    </section>
     
   </div>
 </aside>
