--- a/search/index.html
+++ b/search/index.html
@@ -148,7 +148,11 @@ Dev With Vishal
     <input class="form-control rounded-pill" name="q" type="search" aria-label="Search">
   </div>
 </form>
-      <ul class="navbar-nav ms-auto"></ul>
+      <ul class="navbar-nav ms-auto"><li class="nav-item">
+          <a class="nav-link" href="/series/">
+            <i class="fas fa-fw fa-columns"></i>Series
+          </a>
+        </li></ul>
     </div>
   </div>
 </nav>
