--- a/404.html
+++ b/404.html
@@ -149,8 +149,20 @@ Dev With Vishal
   </div>
 </form>
       <ul class="navbar-nav ms-auto"><li class="nav-item">
-          <a class="nav-link" href="/series/">
-            <i class="fas fa-fw fa-columns"></i>Series
+          <a class="nav-link" href="/tags">
+            <i class='fas fa-fw fa-tags'></i>Tags
+          </a>
+        </li><li class="nav-item">
+          <a class="nav-link" href="/series">
+            <i class='fas fa-fw fa-columns'></i>Series
+          </a>
+        </li><li class="nav-item">
+          <a class="nav-link" href="/categories">
+            <i class='fas fa-fw fa-folder'></i>Categories
+          </a>
+        </li><li class="nav-item">
+          <a class="nav-link" href="/archives">
+            <i class='fas fa-fw fa-file-archive'></i>Archives
           </a>
         </li></ul>
     </div>
