--- a/about/index.html
+++ b/about/index.html
@@ -154,8 +154,20 @@ Dev With Vishal
   </div>
 </form>
       <ul class="navbar-nav ms-auto"><li class="nav-item">
-          <a class="nav-link" href="/series/">
-            <i class="fas fa-fw fa-columns"></i>Series
+          <a class="nav-link" href="/tags">
+            <i class='fas fa-fw fa-tags'></i>Tags
+          </a>
+        </li><li class="nav-item">
+          <a class="nav-link" href="/series">
+            <i class='fas fa-fw fa-columns'></i>Series
+          </a>
+        </li><li class="nav-item">
+          <a class="nav-link" href="/categories">
+            <i class='fas fa-fw fa-folder'></i>Categories
+          </a>
+        </li><li class="nav-item">
+          <a class="nav-link" href="/archives">
+            <i class='fas fa-fw fa-file-archive'></i>Archives
           </a>
         </li></ul>
     </div>
@@ -267,6 +279,17 @@ Dev With Vishal
         <div class="py-2"><a href="/series/distributed-systems/" class="badge rounded post-taxonomy" title="Distributed Systems">
             Distributed Systems<span class="badge badge-sm text-white bg-accent ms-1">1</span></a></div>
       </div>
+    </section><section class="categories-taxonomies row card component">
+      <div class="card-header">
+        <h2 class="card-title">
+          <a href="/categories">Categories</a>
+        </h2>
+      </div>
+      <div class="card-body">
+        <div class="py-2"><a href="/categories/engineering/" class="badge rounded post-taxonomy" title="engineering">
+            engineering<span class="badge badge-sm text-white bg-accent ms-1">1</span></a><a href="/categories/technical/" class="badge rounded post-taxonomy" title="technical">
+            technical<span class="badge badge-sm text-white bg-accent ms-1">1</span></a></div>
+      </div>
     </section><section class="tags-taxonomies row card component">
       <div class="card-header">
         <h2 class="card-title">
@@ -275,8 +298,7 @@ Dev With Vishal
       </div>
       <div class="card-body">
         <div class="py-2"><a href="/tags/crdts/" class="badge rounded post-taxonomy" title="CRDTs">
-            CRDTs<span class="badge badge-sm text-white bg-accent ms-1">1</span></a><a href="/tags/distributed-systems/" class="badge rounded post-taxonomy" title="Distributed Systems">
-            Distributed Systems<span class="badge badge-sm text-white bg-accent ms-1">1</span></a></div>
+            CRDTs<span class="badge badge-sm text-white bg-accent ms-1">1</span></a></div>
       </div>
     </section>
     
